some updates to methods and phrasing

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
         <div class="slideshow-container">
             <div class="swiper">
                 <div class="swiper-wrapper">
-                    <div class="swiper-slide"><img src="images/slideshow/cdf_10.jpg" alt=""></div>
                     <div class="swiper-slide"><img src="images/slideshow/cdf_1.jpg" alt=""></div>
                     <div class="swiper-slide"><img src="images/slideshow/cdf_4.jpg" alt=""></div>
+                    <div class="swiper-slide"><img src="images/slideshow/cdf_10.jpg" alt=""></div>
                     <!-- <div class="swiper-slide"><img src="images/slideshow/cdf_8.jpeg" alt=""></div> -->
                     <div class="swiper-slide"><img src="images/slideshow/cdf_3.jpg" alt=""></div>
                     <div class="swiper-slide"><img src="images/slideshow/cdf_5.jpg" alt=""></div>
@@ -119,10 +119,10 @@
                             <span class="tab-subitem">Data Processing/Visualization, Estimation</span></li>
                         <li><span>Stata</span><br>
                             <span class="tab-subitem">Data Processing/Visualization, Estimation</span></li>
-                        <li><span>LaTex</span><br>
-                            <span class="tab-subitem">Technical Writing, TikZ</span></li>
-                        <li><span>Microsoft Excel</span><br>
-                            <span class="tab-subitem">Data Processing/Visualization</li>
+                        <li><span>LaTeX</span><br>
+                            <span class="tab-subitem">Technical Writing</span></li>
+                        <!-- <li><span>Microsoft Excel</span><br>
+                            <span class="tab-subitem">Data Processing/Visualization</li> -->
                         <li><span>HTML, CSS, JS</span><br> 
                             <span class="tab-subitem">This Website</span></li>
                     </ul>
