--- a/pages/galleries.html
+++ b/pages/galleries.html
@@ -62,9 +62,9 @@
                     </div>
                 </div>
             </div>
-            <!-- <a href="#">See More</a> -->
+            <a href="#">See More</a> -->
         </div>
-    </div> -->
+    </div>
 
     <script>
 
