--- a/pages/methodology.html
+++ b/pages/methodology.html
@@ -52,7 +52,10 @@
                             The Methodology of Positive Economics</a><span> by Milton Freidman</span></li>
                 <li class="title-article">
                     <a href="https://www.journals.uchicago.edu/doi/abs/10.1086/258584">
-                        Irrational Behavior and Economic Theory</a><span> by Gary S. Becker</span></li>        
+                        Irrational Behavior and Economic Theory</a><span> by Gary S. Becker</span></li>
+                <li class="title-article">
+                    <a href="https://www.jstor.org/stable/pdf/2298123.pdf">
+                        Econometric Policy Evaluation: A Critique</a><span> by Robert E. Lucas</span></li>
                 <li class="title-article">
                     <a href="https://www.jstor.org/stable/pdf/2298123.pdf">
                         Identification of Endogenous Social Effects: The Reflection Problem</a><span> by Charles F. Manski</span></li>
@@ -63,8 +66,8 @@
     <div class="works-container">
         <h1>Books</h1>
             <ul>
-                <li class="title-book"> War and Peace<span> by Leo Tolstoy</span></li>
-                <li class="title-book"> Risk, Uncertainty and Profit<span> by Frank H. Knight</span></li>
+                <li class="title-book">War and Peace<span> by Leo Tolstoy</span></li>
+                <li class="title-book">Risk, Uncertainty and Profit<span> by Frank H. Knight</span></li>
                 <li class="title-book">Human Action (vol. 1)<span> by Ludwig Von Mises</span></li>
                 <li class="title-book">The Logic of Scientific Discovery<span> by Karl R. Popper</span></li>
                 <li class="title-book">Statistical Decision Functions<span> by Abraham Wald</span></li>
@@ -72,7 +75,6 @@
                 <li class="title-book">Identification for Prediction and Decision<span> by Charles F. Manski</span></li>
                 <li class="title-book">Theory of Decision Under Uncertainty<span> by Itzhak Gilboa</span></li>
                 <li class="title-book">Robustness<span> by Lars Peter Hansen and Thomas J. Sargent </span></li>
-
             </ul>
     </div>
 
