--- a/pages/projects.html
+++ b/pages/projects.html
@@ -27,8 +27,8 @@
         </div>
     </div>
     <div class="page-descr">
-        I am <span>not</span> a trained economist, but below are some topics I am working 
-        on with what training I do have. All comments are welcome.
+        I am <span>not</span> a trained economist, but below are some notes on some 
+        topics that interest me. All comments are welcome. 
     </div>
     <div class="subtitle">
         Projects with Drafts
@@ -47,7 +47,7 @@
                             this interpretation, it becomes unclear when one should regard a 
                             social or economic theory as <span>testable</span>. I propose a 
                             criterion for classifying testable social and economic theories
-                            as an extension of Karl Poppers answer to the <span> Problem of Demarcation.</span>
+                            as an extension of Karl Popper's answer to the <span> Problem of Demarcation.</span>
                         </p></li>
                 <li class="project-title-link">
                     <a href="https://drive.google.com/file/d/1_rRIIkDGIBbMW2dig3_PMMtTGtlfrNfm/view?usp=sharing">
@@ -73,7 +73,7 @@
             </ul>
     </div>
     <div class="subtitle">
-        Works in progress
+        Prospective Topics/Projects without Drafts
     </div>
     <div class="working-paper">
         <h1></h1>
@@ -98,7 +98,7 @@
                             wage structure locally.  
                         </p></li>
                 <li class="project-title-link">
-                    Partial Identification in Risk Management
+                    Leveraging Uncertainty in Risk Management
                         <p>
                             Many models of risk management utilize distributional assumptions on the risk associated with 
                             porfolios. In particular, FHVaR utilizes assumptions on the stability of the distribution of 
