--- a/pages/methodology.html
+++ b/pages/methodology.html
@@ -54,7 +54,7 @@
                     <a href="https://www.journals.uchicago.edu/doi/abs/10.1086/258584">
                         Irrational Behavior and Economic Theory</a><span> by Gary S. Becker</span></li>
                 <li class="title-article">
-                    <a href="https://www.jstor.org/stable/pdf/2298123.pdf">
+                    <a href="https://web.sgh.waw.pl/~atoroj/makroekonomia_zaawansowana/lucas76.pdf">
                         Econometric Policy Evaluation: A Critique</a><span> by Robert E. Lucas</span></li>
                 <li class="title-article">
                     <a href="https://www.jstor.org/stable/pdf/2298123.pdf">
