--- a/index.html
+++ b/index.html
@@ -114,9 +114,11 @@
                 <div class="tab-contents" id="Skills">
                     <ul>
                         <li><span>Python</span><br>
-                            <span class="tab-subitem">Econometric Modelling/Estimation,<br>Data Processing/Visualization, Optimization,<br>Webscrapping</span></li>
+                            <span class="tab-subitem">Econometric Modelling/Estimation,<br>Data Processing/Visualization, Optimization, JAX,<br>Webscrapping</span></li>
                         <li><span>R</span><br>
-                            <span class="tab-subitem">Data Processing/Visualization, Estimation</span></li>
+                            <span class="tab-subitem">Processing Large Datasets, Visualization, Estimation</span></li>
+                        <li><span>Julia</span><br>
+                            <span class="tab-subitem">code optimization with CUDA.jl</span></li>
                         <li><span>Stata</span><br>
                             <span class="tab-subitem">Data Processing/Visualization, Estimation</span></li>
                         <li><span>LaTeX</span><br>
