updates to methodology, and text

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <ul id="sidemenu">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
-                <li><a href="#portfolio">Research & Projects</a></li>
+                <li><a href="#portfolio">Interests</a></li>
                 <li><a href="#intrigues">Intrigues</a></li>
                 <i class="fa-solid fa-circle-xmark" onclick="closemenu()"></i>
             </ul>
@@ -77,7 +77,7 @@
             </div>
             <div class="about-col-2">
                 <h1 class="sub-title">About</h1>
-                <p><br>I am a Predoc at MIT Sloan focusing on projects in industrial organisation under Professors Mert Demirer and Ben Vatter.</p>
+                <p><br>I'm a Predoc at MIT Sloan focusing on projects in industrial organisation under Professors Mert Demirer and Ben Vatter.</p>
 
                 <div class="tab-titles">
                     <p class="tab-links active-link" onclick="opentab('Education')">Education</p>
@@ -114,13 +114,13 @@
                 <div class="tab-contents" id="Skills">
                     <ul>
                         <li><span>Python</span><br>
-                            <span class="tab-subitem">Econometric Modelling/Estimation,<br>Data Processing/Visualization, Optimization, JAX,<br>Webscrapping</span></li>
+                            <span class="tab-subitem">Structural Modelling/Estimation,<br>Descriptives, Optimization, JAX,<br>Webscrapping</span></li>
                         <li><span>R</span><br>
-                            <span class="tab-subitem">Processing Large Datasets, Visualization, Estimation</span></li>
+                            <span class="tab-subitem">Cleaning and Describing Large Datasets</span></li>
                         <li><span>Julia</span><br>
-                            <span class="tab-subitem">code optimization with CUDA.jl</span></li>
+                            <span class="tab-subitem">Structural Estimation, parallel processing (CUDA.jl)</span></li>
                         <li><span>Stata</span><br>
-                            <span class="tab-subitem">Data Processing/Visualization, Estimation</span></li>
+                            <span class="tab-subitem">Descriptives</span></li>
                         <li><span>LaTeX</span><br>
                             <span class="tab-subitem">Technical Writing</span></li>
                         <!-- <li><span>Microsoft Excel</span><br>
@@ -150,13 +150,13 @@
 
 <div id="portfolio">
     <div class="container">
-        <h1 class="sub-title">Research & Projects</h1>
+        <h1 class="sub-title">Interests</h1>
         <div class="work-list">
             <div class="work">
                 <img src="images/papers/demarcation.png">
                 <div class="layer">
                     <h3>Demarcation</h3>
-                    <p>My senior thesis which discusses a criterion for classifying economic theories as testable</p>
+                    <p>My senior thesis discussing when an economic theory is testable.</p>
                     <a href="https://drive.google.com/file/d/1J-HLnurkB4ZEhGcBv_Lhzu1f6YTArejz/view?usp=sharing"><i class="fa-solid fa-link"></i></a>
                 </div>
             </div>
@@ -171,7 +171,7 @@
             <div class="work">
                 <img src="images/papers/other.png">
                 <div class="layer">
-                    <h3>All Projects</h3>
+                    <h3>Ideas</h3>
                     <p>Current ideas and projects</p>
                     <a href="pages/projects"><i class="fa-solid fa-link"></i></a>
                 </div>
