--- a/pages/methodology.html
+++ b/pages/methodology.html
@@ -57,6 +57,9 @@
                     <a href="https://web.sgh.waw.pl/~atoroj/makroekonomia_zaawansowana/lucas76.pdf">
                         Econometric Policy Evaluation: A Critique</a><span> by Robert E. Lucas</span></li>
                 <li class="title-article">
+                    <a href="https://www.jstor.org/stable/1885326">
+                        Equilibirum in Competitve Insurance Markets</a><span> by Michael Rothschild & Joseph Stiglitz</span></li>
+                <li class="title-article">
                     <a href="https://www.jstor.org/stable/pdf/2298123.pdf">
                         Identification of Endogenous Social Effects: The Reflection Problem</a><span> by Charles F. Manski</span></li>
                 <li class="title-article"><a href="https://www.jstor.org/stable/29783690">
@@ -75,6 +78,18 @@
                 <li class="title-book">Identification for Prediction and Decision<span> by Charles F. Manski</span></li>
                 <li class="title-book">Theory of Decision Under Uncertainty<span> by Itzhak Gilboa</span></li>
                 <li class="title-book">Robustness<span> by Lars Peter Hansen and Thomas J. Sargent </span></li>
+            </ul>
+    </div>
+
+    <div class="works-container">
+        <h1>Slides</h1>
+            <ul>
+                <li class="title-article">
+                    <a href="https://www.dropbox.com/s/8kwtwn30dyac18s/intro.pdf?dl=0">
+                        Models, Measurement, and the Language of Empirical Economics</a><span> by Phil Haile</span></li>
+            <li class="title-article">
+                <a href="https://davidcard.berkeley.edu/lectures/woytinsky.pdf">
+                    Model-Based, or Design-Based?</a><span> by David Card</span></li>
             </ul>
     </div>
 
