--- a/pages/methodology.html
+++ b/pages/methodology.html
@@ -15,7 +15,7 @@
                 <!-- <img src="images/logo.jpg" class="logo"> -->
                 <ul id="sidemenu">
                     <li><a href="../index">Home</a></li>
-                    <li><a href="projects">Research & Projects</a></li>
+                    <li><a href="projects">Interests</a></li>
                     <li><a href="galleries">Galleries</a></li>
                     <i class="fa-solid fa-circle-xmark" onclick="closemenu()"></i>
                 </ul>
