--- a/index.html
+++ b/index.html
@@ -27,14 +27,13 @@
             <h1>Aaron Banks</h1>
         </div>
     </div>
-    <div id="home">
+    <!-- <div id="home">
         <div class="slideshow-container">
             <div class="swiper">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide"><img src="images/slideshow/cdf_1.jpg" alt=""></div>
                     <div class="swiper-slide"><img src="images/slideshow/cdf_4.jpg" alt=""></div>
                     <div class="swiper-slide"><img src="images/slideshow/cdf_10.jpg" alt=""></div>
-                    <!-- <div class="swiper-slide"><img src="images/slideshow/cdf_8.jpeg" alt=""></div> -->
                     <div class="swiper-slide"><img src="images/slideshow/cdf_3.jpg" alt=""></div>
                     <div class="swiper-slide"><img src="images/slideshow/cdf_5.jpg" alt=""></div>
                     <div class="swiper-slide"><img src="images/slideshow/cdf_7.jpg" alt=""></div>
@@ -45,7 +44,7 @@
             </div>
         </div>
     </div>
-    <div class="slideshow-caption"><p>While you are here, please enjoy some Caspar David Friedrich</p></div>
+    <div class="slideshow-caption"><p>While you are here, please enjoy some Caspar David Friedrich</p></div> -->
 </div>
     
 <!-- ----- about ------ -->
