updates to color and about

--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
                     <ul>
                         <li><span>Northwestern Unviersity</span><br>
                             <span class="tab-subitem">B.A. Economics (with honors);<br>Minor: Math</span></li>
-                        <li><span>Oakton Community College</span></li>
+                        <li><span>Oakton Community College</span><br>
+                            <span class="tab-subitem">A.A. track (non-degree)</span></li>
                     </ul>
                 </div>
                 <div class="tab-contents" id="Experience">
@@ -102,7 +103,7 @@
                             <span class="tab-subitem">Don Lavoie Fellow</span></li>
                         <li><span>2020-2022</span><br>Northwestern University, Dept. of Economics<br>
                             <span class="tab-subitem"> Research Assistant for Gaston Illanes/Vivek Bhattacharya</span></li>
-                        <li><span>2021</span><br>Baker Program for Undergrad Research<br>
+                        <li><span>2021</span><br>Baker Program for Undergraduate Research<br>
                             <span class="tab-subitem">Advised by Vivek Bhattacharya/Marciano Siniscalchi</span></li>
                         <li><span>2019-2020</span><br>Sibel Health<br>
                             <span class="tab-subitem">Manufacturing Technician</span></li>
@@ -113,11 +114,11 @@
                 <div class="tab-contents" id="Skills">
                     <ul>
                         <li><span>Python</span><br>
-                            <span class="tab-subitem">Structural Modelling/Estimation,<br>Descriptives, Optimization, JAX,<br>Webscrapping</span></li>
+                            <span class="tab-subitem">Structural Modelling/Estimation, Descriptives, Optimization,<br>JAX, Webscrapping</span></li>
                         <li><span>R</span><br>
                             <span class="tab-subitem">Cleaning and Describing Large Datasets</span></li>
                         <li><span>Julia</span><br>
-                            <span class="tab-subitem">Structural Estimation, parallel processing (CUDA.jl)</span></li>
+                            <span class="tab-subitem">Structural Estimation, parallelization (CUDA.jl)</span></li>
                         <li><span>Stata</span><br>
                             <span class="tab-subitem">Descriptives</span></li>
                         <li><span>LaTeX</span><br>
