added notes page

--- a/index.html
+++ b/index.html
@@ -194,10 +194,10 @@
                 <a href="pages/methodology">View List</a>
             </div>
             <div>
-                <i class="fa-solid fa-camera"></i>
-                <h2>Photography</h2>
-                <p></p>
-                <a href="pages/galleries">View Galleries</a>
+                <i class="fa-solid fa-pencil"></i>
+                <h2>Lecture Notes</h2>
+                <p>A list of the best notes I have found for various topics</p>
+                <a href="pages/notes">View Notes</a>
             </div>
         </div>
     </div>
