--- a/pages/methodology.html
+++ b/pages/methodology.html
@@ -16,7 +16,7 @@
                 <ul id="sidemenu">
                     <li><a href="../index">Home</a></li>
                     <li><a href="projects">Interests</a></li>
-                    <li><a href="galleries">Galleries</a></li>
+                    <li><a href="notes">Notes</a></li>
                     <i class="fa-solid fa-circle-xmark" onclick="closemenu()"></i>
                 </ul>
                 <i class="fa-solid fa-bars" onclick="openmenu()"></i>
@@ -28,15 +28,19 @@
     </div>
     <div class="page-descr">
         I borrow the concept of a <span>methodological</span> work from <a href="https://www.jstor.org/stable/48714515">Gilboa et al. (2022)</a>.
-        Below is a list of works that I think are methodologically <span>interesting</span>. This latter classification is independent 
-        of what I might ultimately think about the individual works or their methodological contributions. I hope to be updating this list consistently.
+        Below are some articles, books, and slides that I think are methodologically <span>interesting</span>. 
+        This latter classification is independent of what I might ultimately think about the individual works or their methodological contributions. 
+        I hope to be updating this list consistently.
     </div>
     <div class="works-container">
         <h1>Articles</h1>
             <ul>
                 <li class="title-article">
+                    <a href="https://www.journals.uchicago.edu/doi/abs/10.1086/253349">
+                        Cost of Production and Price Over Long and Short Periods</a><span> by Frank H. Knight</span></li>
+                <li class="title-article">
                     <a href="https://assets.aeaweb.org/asset-server/journals/aer/top20/35.4.519-530.pdf">
-                        The Use of Knowledge in Society</a><span> by Friedrich Hayek</span></li>
+                        The Use of Knowledge in Society</a><span> by Friedrich A. Hayek</span></li>
                  <li class="title-article"><a href="https://www.jstor.org/stable/1826045">
                             The Utility Analysis of Choices Involving Risk</a><span> by Milton Friedman & Leonard J. Savage</span></li>
                 <li class="title-article">
@@ -48,6 +52,9 @@
                     Bandwagon and Underdog Effects and the Possibility of Election Predictions</a><span> by Herbert A. Simon</span></li>
                 <li class="title-article"><a href="https://www.jstor.org/stable/1827103">
                     The Predictability of Social Events</a><span> by Emilie Grunberg & Franco Modigliani</span></li>
+                <li class="title-article">
+                    <a href="https://www.jstor.org/stable/1812044">
+                        Uncertainty and the Welfare Economics of Medical Care</a><span> by Kenneth J. Arrow</span></li>    
                 <li class="title-article"><a href="https://www.wiwiss.fu-berlin.de/fachbereich/bwl/pruefungs-steuerlehre/loeffler/Lehre/bachelor/investition/Friedman_the_methology_of_positive_economics.pdf">
                             The Methodology of Positive Economics</a><span> by Milton Freidman</span></li>
                 <li class="title-article">
@@ -64,6 +71,8 @@
                         Identification of Endogenous Social Effects: The Reflection Problem</a><span> by Charles F. Manski</span></li>
                 <li class="title-article"><a href="https://www.jstor.org/stable/29783690">
                     Falsifiability</a><span> by Wojciech Olzewski & Alvaro Sandroni </span></li>
+                <li class="title-article"><a href="https://scholar.harvard.edu/files/iandrews/files/audience.pdf">
+                    A Model of Scientific Communication</a><span> by Isaiah Andrews & Jesse M. Shapiro</span></li>
             </ul>
     </div>
     <div class="works-container">
