--- a/pages/projects.html
+++ b/pages/projects.html
@@ -16,13 +16,13 @@
                 <ul id="sidemenu">
                     <li><a href="../index">Home</a></li>
                     <li><a href="methodology">Methodology Readings</a></li>
-                    <li><a href="galleries">Galleries</a></li>
+                    <li><a href="notes">Notes</a></li>
                     <i class="fa-solid fa-circle-xmark" onclick="closemenu()"></i>
                 </ul>
                 <i class="fa-solid fa-bars" onclick="openmenu()"></i>
             </nav>
             <div class="header-text">
-                <h1>Research and Projects</h1>
+                <h1>Ideas</h1>
             </div>
         </div>
     </div>
@@ -73,7 +73,7 @@
             </ul>
     </div>
     <div class="subtitle">
-        Prospective Topics/Projects without Drafts
+        Prospective Topics/Ruminations/Projects without Drafts
     </div>
     <div class="working-paper">
         <h1></h1>
