--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                         <li><span>R</span><br>
                             <span class="tab-subitem">Cleaning and Describing Large Datasets</span></li>
                         <li><span>Julia</span><br>
-                            <span class="tab-subitem">Structural Estimation, parallelization (CUDA.jl)</span></li>
+                            <span class="tab-subitem">Structural Modelling/Estimation, parallelization (CUDA.jl)</span></li>
                         <li><span>Stata</span><br>
                             <span class="tab-subitem">Descriptives</span></li>
                         <li><span>LaTeX</span><br>
